# DCC064

./: .gitmodules  README.md  setup_enviroment.sh  setup_enviroment_HOST.sh  test.py
Host/Python/: process_img.py  server.py  test_consuming_segmented_img.py
Host/Python/classes/: HandlePipeline.py  ImgHandler.py
Host/Python/config/: general_config.yml  requirements.txt
Raspberry/: .gitignore  docker-compose.yml
Raspberry/docker/: Dockerfile
Raspberry/src/camera_pkg/: CMakeLists.txt  package.xml  setup.py
Raspberry/src/camera_pkg/camera_pkg/: get_img_node.py
Raspberry/src/camera_pkg/camera_pkg/classes/: ImgHandler.py  ImgPublisher.py
Raspberry/src/camera_pkg/camera_pkg/config/: general_params.yml  rasp_config.yml
Raspberry/src/camera_pkg/include/camera_pkg/: CameraHandler.py
Raspberry/src/camera_pkg/launch/: send_img_node.launch  system.launch.py
Raspberry/src/camera_pkg/msg/: EncodedImg.msg
Raspberry/src/camera_pkg/src/: send_img_node.py
Raspberry/src/camera_pkg/visualization/: img_debug_visualization.rviz
Raspberry/src/custom_msgs/: CMakeLists.txt  package.xml
Raspberry/src/custom_msgs/msg/: RaspImg.msg
